Bug 138210 - RTF document with a text frame can't open in LibreOffice
Summary: RTF document with a text frame can't open in LibreOffice
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.4.6.2 release
Hardware: All All
: medium normal
Assignee: Mark Hung
URL:
Whiteboard: target:7.1.0 target:7.0.4
Keywords:
: 138583 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-11-14 10:12 UTC by Mark Hung
Modified: 2020-12-01 11:54 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample file. (1.25 KB, application/msword)
2020-11-14 10:13 UTC, Mark Hung
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mark Hung 2020-11-14 10:12:24 UTC
Description:
The attached document contains a text frame - that can be opened in MS Word but not in LibreOffice.

Steps to Reproduce:
Open the attached file.

Actual Results:
It shows "General error. General input / output error."

Expected Results:
File should open successfully. There is a text frame that contains 12345678.


Reproducible: Always


User Profile Reset: No



Additional Info:
None.
Comment 1 Mark Hung 2020-11-14 10:13:32 UTC
Created attachment 167299 [details]
Sample file.
Comment 2 Commit Notification 2020-11-21 01:33:34 UTC
Mark Hung committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/8c14adfa76956e76bac98330ce67f080c90af184

tdf#138210 check if CustomShapeGeometry exist first.

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Xisco Faulí 2020-11-23 09:26:02 UTC
Verified in a local build including the patch.

@Mark, thanks for fixing this issue!!
Comment 4 Commit Notification 2020-11-23 09:27:21 UTC
Mark Hung committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/9db952d2e793577f44df7a4a5b98c19ea87c8db0

tdf#138210 check if CustomShapeGeometry exist first.

It will be available in 7.0.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Xisco Faulí 2020-12-01 11:54:12 UTC
*** Bug 138583 has been marked as a duplicate of this bug. ***