tdf#138210 check if CustomShapeGeometry exist first.

CustomShapeGeometry does not exist for a text frame. Getting
the property throws an Exception and cause a general IO error.

Change-Id: I0e31780292d45211bfd1250d0d359c72def50583